# Image_rotation

./: CMakeLists.txt  README.md  main.cpp
Final/: Final.ipynb
